--- a/clases/primera_clae_intro_R.Rmd
+++ b/clases/primera_clae_intro_R.Rmd
@@ -25,7 +25,7 @@ R permite realizar operaciones aritméticas
 20/5
 ```
 
-E icluso realizar comparaciones entre dos numeros
+E icluso realizar comparaciones entre números
 
 ```{r mayor, eval=FALSE}
 2 > 5
@@ -34,5 +34,7 @@ E icluso realizar comparaciones entre dos numeros
 8 < 20
 5 == 4
 5 == 2+3
+10 >= 10
+8 <= 8
 ```
 
