--- a/clases/segunda_clase.Rmd
+++ b/clases/segunda_clase.Rmd
@@ -10,3 +10,20 @@ knitr::opts_chunk$set(echo = TRUE)
 
 # Vectores
 
+Los vectores son representaciones lineales de la información. Es decir, solo tienen una dimensión. Los vectores pueden tener elementos de tipo caracter, numericos continuos, numericos enteros, fechas, o una mezcla de varios elementos. Para unir varios elemntos utilizamos la funcion c().
+
+Nota: si no saber utilizar una función, recuerda que puedes buscarla en internet o con los siguientes comandos ?c help(c)
+
+```{r vector, eval=FALSE}
+# vector tipo caracter
+c("a", "b", "c", "d")
+# vector numerico continuo
+c(1.2,1.3,1.4,1.5)
+# vector numerico entero
+c(1,2,3,4,5,6,7)
+# vector mixto
+c("a", "b",1, "c",1.3,5)
+```
+
+Nota 1: los elementos de tipo caracter van entre comillas, los vectores de tipo numerico se escriben sin comillas.
+Nota 2: puedes o no colocar un espacio entre cada elemento, el agregar un espacio no afecta el vector
