--- a/clases/segunda_clase.Rmd
+++ b/clases/segunda_clase.Rmd
@@ -48,3 +48,11 @@ c(1:5,15:40,50:100)
 Nota: las comas sirven para separar argumentos, solo debes tener cuidado que no omitas o pongas una coma extra cuando haces tu codigo.
 
 
+Los vectores numericos tambien pueden utilizarse en expresiones matemáticas. Si sumamos un numero a un vector, el numero se sumará a cada uno de los elementos del vector, generando un nuevo vector con el producto de la expresión matemática.
+```{r vector5, eval=FALSE}
+# sumando 5 a cada elemento del vector numeros
+numeros + 5
+# restando 15 a cada elemento del vector numeros
+numeros - 15
+# multiplicando por 10
+numeros * 10
