--- a/clases/segunda_clase.Rmd
+++ b/clases/segunda_clase.Rmd
@@ -51,7 +51,7 @@ Nota: las comas sirven para separar argumentos, solo debes tener cuidado que no 
 
 Los vectores numericos tambien pueden utilizarse en expresiones matemáticas. Si sumamos un numero a un vector, el numero se sumará a cada uno de los elementos del vector, generando un nuevo vector con el producto de la expresión matemática.
 
-```{r vector , eval=FALSE}
+```{r vector5, eval=FALSE}
 # sumando 5 a cada elemnto del vector numeros
 numeros + 5 
 # restando 15 a cada elemento del vector numeros
@@ -60,6 +60,11 @@ numeros - 15
 numeros * 10
 ```
 
+Este resultado solo se observa en la consola, podemos gurdarlo asignandolo a un objeto
+
+```{r vector 6, eval=FALSE}
+vectorcito <- numeros + 5 
+```
 
 
 
