--- a/clases/tercera_clase.Rmd
+++ b/clases/tercera_clase.Rmd
@@ -145,3 +145,4 @@ iris %>%
   arrange(desc(Petal.Width))
 ```
 
+Nota: los pipes también permiten separar el código en acciones individuales. Puedes subrayar ciertas partes de tu código y evaluar cada paso. Esto es útil cuando hay algún error en tu script.
