--- a/clases/tercera_clase.Rmd
+++ b/clases/tercera_clase.Rmd
@@ -192,6 +192,8 @@ iris %>%
 
 ```
 
+Al igual que los verbos previos, podemos utilizarlos en conjunto. Seguiendo el último ejemplo, filtraremos los datos acorde a aquellos que cumplen la condición de tener una longitud de pétalo entre 3.5 y 4.8
+
 
 
 
