--- a/clases/tercera_clase.Rmd
+++ b/clases/tercera_clase.Rmd
@@ -194,6 +194,10 @@ iris %>%
 
 Al igual que los verbos previos, podemos utilizarlos en conjunto. Seguiendo el último ejemplo, filtraremos los datos acorde a aquellos que cumplen la condición de tener una longitud de pétalo entre 3.5 y 4.8
 
+```{r mutate2, eval=FALSE}
+
+```
+
 
 
 
